fe: only show upload box if possible

--- a/fe/tpl/index.html
+++ b/fe/tpl/index.html
@@ -88,11 +88,23 @@
   {{end}}
   {{- template "nav" . -}}
 </div>
-<form action="{{$pt.UpsertPicAction}}" method="post" enctype="multipart/form-data">
-    <input type="file" name="{{$pr.File}}" /><br />
+{{if .CanUpload}}
+<div style="margin-bottom: 2em; margin-top: 2em;">
+  <fieldset>
+    <legend>Pic Upload</legend>
+    <form action="{{$pt.UpsertPicAction}}" method="post" enctype="multipart/form-data">
       <input type="hidden" name="{{$pr.Xsrf}}" value="{{.XsrfToken}}" />
-    <input placeholder="File URL" name="{{$pr.Url}}" /><br />
-    <input type="submit" value="Submit" />
-</form>
-  <a href="{{$pt.Login}}">Login / Join</a>
+      <dl>
+        <dt style="display:inline-block">File Upload (option 1)</dt>
+        <dd style="display:inline-block"><input type="file" name="{{$pr.File}}" /></dd>
+      </dl>
+      <dl>
+        <dt style="display:inline-block">URL Upload (option 2)</dt>
+        <dd style="display:inline-block"><input placeholder="File URL" name="{{$pr.Url}}" /></dd>
+      </dl>
+      <input type="submit" value="Submit" />
+    </form>
+  </fieldset>
+</div>
+{{end}}
 {{end}}
