fe/tpl: center site title

--- a/fe/tpl/pane.html
+++ b/fe/tpl/pane.html
@@ -6,8 +6,8 @@
     max-width: 950px;
   }
   .pane-header {
-    bacgkround-color: #CCCCCC;
-    text-align: center;
+    margin-top: 6px;
+    position: relative;
   }
   .pane-header a {
     text-decoration: none;
@@ -17,6 +17,14 @@
     border: 1px solid black;
     float: right;
     padding: 4px;
+    position: absolute;
+    right: 0%;
+  }
+  .pane-header .site-name {
+    text-align: center;
+  }
+  .pane-header .site-name h1 {
+    display: inline;
   }
   .pane-header .site-name a:link {
     color: #000;
