fe: support setting site name

--- a/fe/tpl/pane.html
+++ b/fe/tpl/pane.html
@@ -56,7 +56,7 @@
       {{end}}
     </div>
     <div class="site-name">
-      <a href="{{$pt.Root}}"><h1>Site Name</h1></a>
+      <a href="{{$pt.Root}}"><h1>{{.SiteName}}</h1></a>
     </div>
   </div>
   {{if .Err}}
