--- a/fe/tpl/base.html
+++ b/fe/tpl/base.html
@@ -7,6 +7,7 @@
     <style>
       body {
         background-color: #FFFFEE;
+        font-family: 'Helvetica', 'Arial', sans-serif;
         margin: 0;
       }
     </style>
