be/handlers: include referrer in upsert hander

--- a/fe/tpl/viewer.html
+++ b/fe/tpl/viewer.html
@@ -147,7 +147,7 @@
       <a href="{{$pt.PicFile .Pic.File}}">View Full</a>
     </div>
   </div>
-  {{ .Pic }}
+  <!-- {{ .Pic }} -->
   <br>
   {{template "commentreply" .PicComment}}
   {{template "comment" .PicComment.Child}}
