--- a/fe/tpl/user_events.html
+++ b/fe/tpl/user_events.html
@@ -1,14 +1,35 @@
 {{- define "panestyle" -}}
 <style>
+  .nav-prev {
+    float: left;
+  }
+  .nav-next {
+    float: right;
+  }
+  .nav:after {
+    clear: both;
+    content: "";
+    display: block;
+  }
 </style>
 {{- end -}}
+{{define "nav"}}
+  {{- $pt := .Paths -}}
+  {{- $pr := $pt.Params -}}
+  <div class="nav">
+    {{if .Prev}}<span class="nav-prev"><a href="{{$pt.UserEvents .ObjectUserId .Prev true}}">Previous</a></span>{{end}}
+    {{if .Next}}<span class="nav-next"><a href="{{$pt.UserEvents .ObjectUserId .Next false}}">Next</a></span>{{end}}
+  </div>
+{{end}}
 {{define "pane"}}
 {{- $pt := .Paths -}}
 {{- $pr := $pt.Params -}}
 <div>
   <h1>Recent Activity</h1>
+  {{- template "nav" . -}}
   {{range .UserEvents}}
     {{.}}
   {{end}}
+  {{- template "nav" . -}}
 </div>
 {{end}}
