--- a/fe/tpl/user_events.html
+++ b/fe/tpl/user_events.html
@@ -26,9 +26,44 @@
 {{- $pr := $pt.Params -}}
 <div>
   <h1>Recent Activity</h1>
+  
   {{- template "nav" . -}}
-  {{range .UserEvents}}
-    {{.}}
+  {{if .UserEvents}}
+    <table>
+    {{range .UserEvents}}
+    
+      <tr>
+        <td>{{.CreatedTime}}</td>
+        <td>
+          {{$evt := .GetOutgoingUpsertPicVote}}{{if $evt}}
+            This user upvoted <a href="{{$pt.Viewer $evt.PicId}}">{{$evt.PicId}}</a>
+          {{end}}
+          {{$evt := .GetIncomingUpsertPicVote}}{{if $evt}}
+            User {{$evt.SubjectUserId}} upvoted 
+            <a href="{{$pt.Viewer $evt.PicId}}">{{$evt.PicId}}</a>
+          {{end}}
+          {{$evt := .GetOutgoingPicComment}}{{if $evt}}
+            This user commented on 
+            <a href="{{$pt.ViewerComment $evt.PicId $evt.CommentId}}">{{$evt.CommentId}}</a>
+          {{end}}
+          {{$evt := .GetIncomingPicComment}}{{if $evt}}
+            Some user commented on 
+            {{if $evt.CommentParentId}}
+              <a href="{{$pt.ViewerComment $evt.PicId $evt.CommentParentId}}"
+                  >{{$evt.CommentParentId}}</a>
+            {{else}}
+              <a href="{{$pt.ViewerComment $evt.PicId $evt.CommentId}}">{{$evt.PicId}}</a>
+            {{end}}
+          {{end}}
+          {{$evt := .GetUpsertPic}}{{if $evt}}
+            This user uploaded pic <a href="{{$pt.Viewer $evt.PicId}}">{{$evt.PicId}}</a>
+          {{end}}
+        </td>
+      </tr>
+    {{end}}
+    </table>
+  {{else}}
+    <p>No more events.</p>
   {{end}}
   {{- template "nav" . -}}
 </div>
