fe: show user names on comments

--- a/fe/tpl/comment.html
+++ b/fe/tpl/comment.html
@@ -1,3 +1,6 @@
 {{- define "pane" -}}
 {{- template "commentreply" . -}}
 {{- end -}}
+{{- define "panestyle" -}}
+{{template "commentstyle"}}
+{{- end -}}
