fe/tpl: make nicer login page, and redirect index/viewer users to it

--- a/fe/tpl/base.html
+++ b/fe/tpl/base.html
@@ -6,7 +6,7 @@
     <title>{{.Title}}</title>
     <style>
       body {
-        background-color: #FFFFEE;
+        background-color: #fefff5;
         font-family: 'Helvetica', 'Arial', sans-serif;
         margin: 0;
       }
