--- a/fe/tpl/pane.html
+++ b/fe/tpl/pane.html
@@ -3,11 +3,12 @@
   .pane {
     margin-left: auto;
     margin-right: auto;
-    max-width: 950px;
+    max-width: 960px;
   }
   .pane-header {
     margin-top: 6px;
     position: relative;
+    margin-bottom: 1em;
   }
   .pane-header a {
     text-decoration: none;
