--- a/fe/tpl/pane.html
+++ b/fe/tpl/pane.html
@@ -66,7 +66,7 @@
       {{if .SubjectUser}}
         <div class="pane-logged-in-user">
           <div class="pane-user-link">
-            <a href="{{"" | $pt.UserEdit}}">{{.SubjectUser.Ident}}</a>
+            <a href="{{$pt.UserEvents "" "" false }}">{{.SubjectUser.Ident}}</a>
           </div>
           <div class="dropdown-user-menu">
             <hr>
